--- a/scss/layout/_flex.scss
+++ b/scss/layout/_flex.scss
@@ -1,3 +1,16 @@
+@mixin flex($breakpoint) {
+  @if $breakpoint == desktop {
+    @media only screen and (min-width: 48rem) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == mobile {
+    @media only screen and (max-width: 48rem) {
+      @content;
+    }
+  }
+}
 .flex {
   display: flex;
   align-items: center;
@@ -7,6 +20,17 @@
 .testimonials {
   display: flex;
   text-align: center;
+
+  @include flex(mobile) {
+    display: none;
+  }
+}
+
+.testimonials-mobile {
+  display: none;
+  @include flex(mobile) {
+    display: block;
+  }
 }
 
 .simplify {
