--- a/scss/testimonial/_main.scss
+++ b/scss/testimonial/_main.scss
@@ -1,3 +1,6 @@
+@use "../util/colors" as color;
+@use "../util/fonts" as font;
+
 .container {
   // position
   position: absolute;
@@ -22,4 +25,8 @@
 input[type="radio"] {
   border: none;
   accent-color: red;
+}
+
+.get-started {
+  text-decoration: none;
 }
