--- a/scss/layout/_flex.scss
+++ b/scss/layout/_flex.scss
@@ -1,3 +1,5 @@
+@use "../util/colors" as color;
+@use "../util/fonts" as font;
 @mixin flex($breakpoint) {
   @if $breakpoint == desktop {
     @media only screen and (min-width: 48rem) {
@@ -34,6 +36,28 @@
 }
 
 .simplify {
+  background: color.$bright-red;
+  height: 220px;
   display: flex;
-  justify-content: space-around;
+  align-items: center;
+}
+.simplify-container {
+  width: 1115px;
+  margin: auto;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .simplify-title {
+    color: color.$vary-light-gray;
+    font-size: 2rem;
+    max-width: 435px;
+    line-height: 1.3;
+  }
+
+  @include flex(mobile) {
+    flex-direction: column;
+    text-align: center;
+  }
 }
