--- a/scss/testimonial/_main.scss
+++ b/scss/testimonial/_main.scss
@@ -1,25 +1,41 @@
 @use "../util/colors" as color;
 @use "../util/fonts" as font;
 
-.container {
-  // position
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.testimonials-question {
+  margin-top: 80px;
+  margin-bottom: 70px;
+}
+
+.testimonials-mobile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  max-width: 500px;
+  padding: 0;
+  font-size: 14px;
+  position: relative;
+}
+
+.card {
+  height: 250px;
+  width: 340px;
 
   // layout
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   text-align: center;
   gap: 2rem;
+  background: color.$vary-light-gray;
+}
 
-  // size
-  margin: 0;
-  max-width: 500px;
-  padding: 0;
-  font-size: 14px;
+.profile {
+  height: 72px;
+  width: 72px;
+  position: absolute;
+  top: -2.5rem;
 }
 
 input[type="radio"] {
@@ -27,6 +43,12 @@ input[type="radio"] {
   accent-color: red;
 }
 
-.get-started {
-  text-decoration: none;
+.testimonials-profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.testimonials-profile:last-child {
+  display: none;
 }
