--- a/scss/globals/_testimonial.scss
+++ b/scss/globals/_testimonial.scss
@@ -1,6 +1,20 @@
 @use "../util/colors" as color;
 @use "../util/fonts" as font;
 
+@mixin testimonials($breakpoint) {
+  @if $breakpoint == desktop {
+    @media only screen and (min-width: 48rem) {
+      @content;
+    }
+  }
+
+  @if $breakpoint == mobile {
+    @media only screen and (max-width: 48rem) {
+      @content;
+    }
+  }
+}
+
 .testimonials-question {
   margin-top: 80px;
   margin-bottom: 70px;
@@ -20,15 +34,22 @@
 .card {
   height: 250px;
   width: 340px;
-
+  padding: 2rem;
   // layout
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   text-align: center;
   gap: 2rem;
   background: color.$vary-light-gray;
+}
+
+.testimonials-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 }
 
 .profile {
