--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -17,6 +17,7 @@
   justify-content: space-around;
   align-items: center;
   @include navigation(mobile) {
+    justify-content: space-between;
     .first {
       display: none;
     }
