current update mobile design

--- a/scss/globals/_main.scss
+++ b/scss/globals/_main.scss
@@ -1,6 +1,20 @@
 @use "../util/fonts" as font;
 @use "../util/colors" as color;
 
+@mixin main($breakpoint) {
+  @if $breakpoint ==desktop {
+    @media only screen and (min-width: 48rem) {
+      @content;
+    }
+  }
+
+  @if $breakpoint ==mobile {
+    @media only screen and (max-width: 48rem) {
+      @content;
+    }
+  }
+}
+
 body {
   color: color.$dark-grayish-blue;
   font-family: font.$font-family;
@@ -18,6 +32,10 @@ body {
   text-decoration: none;
   text-align: center;
   width: 120px;
+
+  @include main(mobile) {
+    margin: 1.813rem auto;
+  }
 }
 
 .hidden {
