--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -15,45 +15,6 @@
   }
 }
 
-.header-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-
-  @include navigation(mobile) {
-    justify-content: space-between;
-    padding: 2.5rem 1.563rem;
-
-    .first {
-      display: none;
-    }
-  }
-}
-
-.nav-main {
-  @include navigation(mobile) {
-    display: none;
-  }
-}
-
-.nav-list {
-  display: flex;
-  gap: 2rem;
-
-  list-style: none;
-}
-
-.nav-link {
-  color: color.$dark-blue;
-  font-weight: font.$fw-500;
-  text-decoration: none;
-}
-
-.nav-link:hover {
-  color: color.$dark-grayish-blue;
-
-}
-
 .btn-mobile-nav {
   background: none;
   border: none;
@@ -67,4 +28,70 @@
   @include navigation(mobile) {
     display: block;
   }
+}
+
+.header-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  @include navigation(mobile) {
+
+    justify-content: space-between;
+    padding: 2.5rem 1.563rem;
+
+    .first {
+      display: none;
+    }
+  }
+}
+
+.nav-main {
+
+  @include navigation(mobile) {
+
+    background: #fff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: none;
+    position: absolute;
+    top: 100px;
+    left: 50%;
+    transform: translate(-50%);
+    width: 90%;
+
+    font-weight: font.$fw-700;
+    padding: 3rem;
+  }
+
+
+}
+
+.nav-main.active {
+  display: block;
+}
+
+.nav-list {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+
+  @include navigation(mobile) {
+    gap: 1.5rem;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.nav-link {
+  color: color.$dark-blue;
+  font-weight: font.$fw-500;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: color.$dark-grayish-blue;
+
 }
