--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -27,18 +27,32 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  max-width: 1150px;
+  max-width: 71.875rem;
 
   &-content {
     &__title {
       color: color.$dark-blue;
-      font-size: 2.2rem;
+      font-size: 3rem;
       line-height: 1.3;
+      max-width: 27.5rem;
+
+      @include grid(mobile) {
+        font-size: 2.2rem;
+        text-align: center;
+        max-width: unset;
+      }
     }
 
     &__text {
       line-height: 1.8;
       margin: 1rem 0 2rem;
+      max-width: 22.938rem;
+
+      @include grid(mobile) {
+        max-width: unset;
+        text-align: center;
+      }
+
     }
 
     @include grid(mobile) {
@@ -53,7 +67,7 @@
     justify-content: center;
     align-items: center;
     font-size: font.$font-size;
-    margin: 0 2rem;
+    margin: 6.25rem 0 2rem;
   }
 }
 
@@ -61,7 +75,8 @@
 .grid-mid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  max-width: 1150px;
+  max-width: 71.875rem;
+
 
   @include grid(mobile) {
     display: flex;
@@ -71,11 +86,25 @@
   &-content {
     &__title {
       color: color.$dark-blue;
+      font-size: 2.3rem;
+      line-height: 1.3;
+      max-width: 26.563rem;
+
+      @include grid(mobile) {
+        text-align: center;
+        max-width: unset;
+      }
     }
 
     &__text {
-      max-width: 330px;
       line-height: 1.8;
+      max-width: 20.625rem;
+      margin-top: 2.813rem;
+
+      @include grid(mobile) {
+        text-align: center;
+        max-width: unset;
+      }
     }
 
     @include grid(mobile) {
@@ -88,7 +117,7 @@
 
       &__text {
         max-width: unset;
-        margin: 1rem 10px;
+        margin: 1rem 0.625rem;
       }
     }
   }
@@ -96,29 +125,34 @@
 
 // manage-article
 .manage-article {
+
+  display: flex;
+  gap: 2rem;
+
   &-number {
     background: color.$bright-red;
+    border-radius: 3.125rem;
     color: color.$vary-light-gray;
     height: fit-content;
     padding: 0.5rem;
     text-align: center;
+    width: 12.5rem;
 
     @include grid(mobile) {
       position: relative;
       left: 1rem;
-      width: 200px;
-
-      border-radius: 50px;
     }
   }
 
   &-title {
     color: color.$dark-blue;
-    background: color.$very-pale-red;
     font-size: font.$font-size;
     padding: 0.5rem;
 
-    text-align: center;
+    @include grid(mobile) {
+      background: color.$very-pale-red;
+      text-align: center;
+    }
   }
 
   &-text {
@@ -128,6 +162,6 @@
 
   @include grid(mobile) {
     display: flex;
-    margin-bottom: 50px;
+    margin-bottom: 3.125rem;
   }
 }
