--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -36,9 +36,14 @@
   align-items: center;
 
   @include navigation(mobile) {
-
+    position: fixed;
+    background: color.$vary-light-gray;
     justify-content: space-between;
     padding: 2.5rem 1.563rem;
+
+    width: 100%;
+
+    z-index: 100;
 
     .first {
       display: none;
@@ -54,7 +59,7 @@
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: none;
     position: absolute;
-    top: 100px;
+    top: 130px;
     left: 50%;
     transform: translate(-50%);
     width: 90%;
